# starlark_config_example

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  run.sh
cfg/: BUILD.bazel  prometheus.bzl
cmd/: BUILD.bazel  evaluate.go
proto/github.com/michaelboulton/starlark_config_example/v1/: BUILD.bazel  prometheus.proto
proto/github/com/michaelboulton/starlark_config_example/v1/prometheus/: BUILD.bazel  prometheus.proto
v1/prometheus/: prometheus.pb.go
