load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["evaluate.go"],
    importpath = "github.com/michaelboulton/starlark_config_example/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/github/com/michaelboulton/starlark_config_example/v1/prometheus",
        "@com_github_argoproj_argo_workflows_v3//pkg/apiclient/workflowtemplate:go_default_library",
        "@com_github_argoproj_argo_workflows_v3//pkg/apis/workflow/v1alpha1:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_pkg_errors//:errors",
        "@com_github_stripe_skycfg//:skycfg",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoregistry",
    ],
)

go_binary(
    name = "cmd",
    data = [
        "//cfg:prometheus.bzl",
    ],
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
