load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v1_proto",
    srcs = ["prometheus.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "v1_go_proto",
    importpath = "github.com/michaelboulton/starlark_config_example/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "starlark_config_example",
    embed = [":v1_go_proto"],
    importpath = "github.com/michaelboulton/starlark_config_example/v1",
    visibility = ["//visibility:public"],
)
